// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider renders 1`] = `
<div>
  <div
    class="makeStyles-wrapper"
  >
    <span
      class="MuiSlider-root makeStyles-root MuiSlider-colorPrimary"
    >
      <span
        class="MuiSlider-rail makeStyles-rail"
      />
      <span
        class="MuiSlider-track makeStyles-track"
        style="left: 0%; width: 0%;"
      />
      <input
        type="hidden"
        value="0"
      />
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="0"
        class="MuiSlider-thumb makeStyles-thumb MuiSlider-thumbColorPrimary"
        data-index="0"
        role="slider"
        style="left: 0%;"
        tabindex="0"
      />
    </span>
  </div>
</div>
`;

exports[`Slider with initial value 1`] = `
<div>
  <div
    class="makeStyles-wrapper"
  >
    <span
      class="MuiSlider-root makeStyles-root MuiSlider-colorPrimary"
    >
      <span
        class="MuiSlider-rail makeStyles-rail"
      />
      <span
        class="MuiSlider-track makeStyles-track"
        style="left: 0%; width: 4%;"
      />
      <input
        type="hidden"
        value="4"
      />
      <span
        aria-orientation="horizontal"
        aria-valuemax="100"
        aria-valuemin="0"
        aria-valuenow="4"
        class="MuiSlider-thumb makeStyles-thumb MuiSlider-thumbColorPrimary"
        data-index="0"
        role="slider"
        style="left: 4%;"
        tabindex="0"
      />
    </span>
  </div>
</div>
`;
